--- a/app/static/index.html
+++ b/app/static/index.html
@@ -330,8 +330,9 @@ function reiniciarConversa() {
 } 
 
 // Dummy para enviar email (preencha conforme seu backend)
+
 function enviarEmailFinal() {
-  alert('Função de enviar email ainda não implementada.');
+  <button onclick="enviarEmailFinal()">📤 Enviar Diagnóstico</button>
 }
 </script>
 
